tests/baselines/reference/continueInIterationStatement4.errors.txt
continueInIterationStatement4.ts(1,15): error TS2304: Cannot find name 'something'.


==== continueInIterationStatement4.ts (1 errors) ====
    for (var i in something) {
                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'something'.
      continue;
    }